--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Homework2)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Homework2 Source/build-test.cpp Source/build.cpp Header/build.h)
+add_executable(Homework2 Source/build-test.cpp Source/build.cpp Header/build.h boost)
